# Pumpfun-Market-maker

./: README.md  pyproject.toml
configs/: example.yaml
scripts/: run_paper.py
src/mm/: config.py  models.py  risk.py  simulator.py  strategy.py
src/mm/venues/: base.py  paper.py
tests/: test_simulator.py
