[project]
name = "memecoin-market-maker"
version = "0.1.0"
description = "Inventory-aware market making simulator + paper venue"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.6",
  "pyyaml>=6.0",
  "numpy>=1.26",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
